# covidd

./: Cargo.toml  Makefile  Makefile.toml  README.md  release.toml
.github/workflows/: releases.yml
src/: api.rs  args.rs  cache.rs  data.rs  main.rs  messages.rs  ui.rs
