[package]
name = "covidd"
version = "0.1.9"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Render current covid data for Dresden in the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/covidd/"
edition = "2021"
resolver = "2"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "=3.0.0-rc.8"
color-eyre = { version = "0.5.11", features = ["issue-url"] }
crossterm = "0.22.1"
csv = "1.1.6"
directories = "4.0.1"
fs2 = "0.4.3"
humantime = "2.1.0"
locale_config = "0.3.0"
minreq = { version = "2.4.2", features = ["https", "json-using-serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tracing = "0.1.29"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.25"

[dependencies.tui]
git = "https://github.com/knutwalker/tui-rs"
branch = "chart-top-left-legend"
version = "0.16.0"
default-features = false
features = ["crossterm"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
sign-commit = true
sign-tag = true
no-dev-version = true
