[package]
name = "covidd"
version = "0.1.9"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Render current covid data for Dresden in the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/covidd/"
edition = "2021"
resolver = "2"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive", "deprecated"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
crossterm = "0.25.0"
csv = "1.2.1"
directories = "4.0.1"
fs2 = "0.4.3"
humantime = "2.1.0"
locale_config = "0.3.0"
minreq = { version = "2.6.0", features = ["https", "json-using-serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.tui]
git = "https://github.com/knutwalker/tui-rs"
branch = "chart-top-left-legend"
version = "0.19.0"
default-features = false
features = ["crossterm"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
sign-commit = true
sign-tag = true
no-dev-version = true
